// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`do.js format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
  {do {
	  1
  }}
</div>

=====================================output=====================================
<div>
  {do {
    1;
  }}
</div>;

================================================================================
`;

exports[`do.js format[babel]} 2`] = `
"Unexpected token (2:4)
  1 | <div>
> 2 |   {do {
    |    ^
  3 | 	  1
  4 |   }}
  5 | </div>
Cause: Unexpected token (2:3)"
`;

exports[`do.js format[babel]} 3`] = `
"Unexpected token do (2:4)
  1 | <div>
> 2 |   {do {
    |    ^
  3 | 	  1
  4 |   }}
  5 | </div>
Cause: Unexpected token do"
`;

exports[`do.js format[babel]} 4`] = `
"Unexpected token: 'do' (2:4)
  1 | <div>
> 2 |   {do {
    |    ^^
  3 | 	  1
  4 |   }}
  5 | </div>
Cause: [2:3-2:5]: Unexpected token: 'do'"
`;

exports[`do.js format[babel]} 5`] = `
"Unexpected token (2:4)
  1 | <div>
> 2 |   {do {
    |    ^^
  3 | 	  1
  4 |   }}
  5 | </div>"
`;
